# python-starter-app

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/app/: application.py  greeting.py
src/domain/: hello.py
tests/acceptance/features/: example.feature
tests/acceptance/step_defs/: test_example_steps.py
tests/unit/: test_hello.py
tests/units/: test_greeting.py
typings/assertpy/: __init__.pyi  assertpy.pyi  base.pyi  collection.pyi  contains.pyi  date.pyi  dict.pyi  dynamic.pyi  exception.pyi  extracting.pyi  file.pyi  helpers.pyi  numeric.pyi  snapshot.pyi  string.pyi
